# Seedling

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.sh  test_suite.sh
.github/workflows/: ci.yml
docs/: CHANGELOG.md  README_zh.md  prompt_example.md
seedling/: __init__.py  main.py
seedling/commands/scan/: __init__.py  exclude.py  explorer.py  full.py  grep.py  json_output.py  search.py  skeleton.py
seedling/core/: __init__.py  config.py  detection.py  filesystem.py  io.py  logger.py  patterns.py  sysinfo.py  traversal.py  ui.py
seedlingtools/: __init__.py  main.py
seedlingtools/commands/scan/: __init__.py  base.py  explorer.py  helper.py
seedlingtools/commands/scan/exporters/: __init__.py  json_output.py  text_output.py  xml_output.py
seedlingtools/commands/scan/plugins/: __init__.py  analyzer.py  grep.py  search.py  skeleton.py
seedlingtools/core/: __init__.py  config.py  patterns.py  traversal.py
seedlingtools/utils/: __init__.py  constants.py  exceptions.py  git_helper.py  image_helper.py  io_helper.py  log_helper.py  patterns.py  sysinfo.py  term_helper.py
tests/: __init__.py  test_build_components.py  test_commands_build.py  test_commands_scan.py  test_core_engine.py  test_edge_cases.py  test_exporters.py  test_scan_plugins.py  test_scan_skeleton.py  test_utils_infrastructure.py  test_utils_io_helper.py  test_v24_features.py
tests/e2e/: common.sh  test_01_security.sh  test_02_engine.sh  test_03_ux.sh  test_04_plugins.sh  test_05_exporters.sh
tests/unit/: __init__.py  test_build_components.py  test_commands_build.py  test_commands_scan.py  test_core_engine.py  test_edge_cases.py  test_exporters.py  test_scan_plugins.py  test_scan_skeleton.py  test_utils_infrastructure.py  test_utils_io_helper.py  test_utils_term_helper.py
