[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Seedling-tools"
version = "2.5.1"
description = "A high-performance CLI toolkit designed for codebase exploration, intelligent analysis, and LLM context aggregation."
readme = "README.md"
authors = [
    { name = "Kaelen Chow" }
]
requires-python = ">=3.8"
keywords = [
    "python", "cli", "productivity", "terminal", "developer-tools",
    "directory-tree", "scaffolding", "llm", "context-window", "ai-tools"
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities"
]
dependencies = []

[project.optional-dependencies]
image = [
    "Pillow>=9.0.0"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "Pillow>=9.0.0"
]

[project.urls]
Homepage = "https://github.com/bbpeaches/Seedling"
Repository = "https://github.com/bbpeaches/Seedling.git"
Issues = "https://github.com/bbpeaches/Seedling/issues"
Changelog = "https://github.com/bbpeaches/Seedling/blob/main/CHANGELOG.md"

[project.scripts]
scan = "seedlingtools.main:scan"
build = "seedlingtools.main:build"